// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterDocs Component 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle icon icon-loading icon-spin"
    fill="none"
    height="16"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</DocumentFragment>
`;

exports[`FilterDocs Component 2`] = `
<DocumentFragment>
  <table
    class="table table-condensed"
  >
    <tbody>
      <tr>
        <td>
          cmd1
        </td>
        <td>
          foo
        </td>
      </tr>
      <tr>
        <td>
          cmd2
        </td>
        <td>
          bar
        </td>
      </tr>
      <tr>
        <td
          colspan="2"
        >
          <a
            href="https://mitmproxy.org/docs/latest/concepts-filters/"
            rel="noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-external-link icon icon-external"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 3h6v6"
              />
              <path
                d="M10 14 21 3"
              />
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
            </svg>
              mitmproxy docs
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
